build: optimize build and checkstyle config